--- a/client/src/Styles/Home.css
+++ b/client/src/Styles/Home.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     background-size: cover;
+    font-size: 100%;
   }
   
   .background-image {
